@@ -89,7 +89,7 @@ private:
 class SwatchesPanel : public Inkscape::UI::Widget::Panel
 {
 public:
-    SwatchesPanel();
+    SwatchesPanel(gchar const* prefsPath = "dialogs.swatches");
     virtual ~SwatchesPanel();
 
     static SwatchesPanel& getInstance();
